--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -48,6 +48,7 @@
       <dl class="border-t border-gray-200 sm:divide-y sm:divide-gray-200">
         <% specs = {
           "Lichting": @user.batch,
+          "Inschrijfratio (laatste jaar)": @user.drink_ratio.to_s + "%",
           "Aantal keer geciteerd": @user.quotes.count,
           "Aantal bieren gereviewd": @user.reviews.count,
           "Aantal stickers geplakt": @user.stickers.count,
