--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -74,7 +74,7 @@
       <% if @user.alid? && current_user.traject? %>
         <div class="p-2 sm:p-4 border-t border-gray-200">
           <h4>
-            Rereviewde bieren
+            Gereviewde bieren
             <span class="text-gray-500"><%= @user.reviews.count %></span>
           </h4>
           <ul class="list-disc list-inside">
