--- a/app/views/chugs/_form.html.erb
+++ b/app/views/chugs/_form.html.erb
@@ -9,10 +9,7 @@
     </div>
     <div class="grid grid-cols-6 gap-4">
       <div>
-        <%= f.number_field :secs, class: input_classes, required: true, placeholder: "s" %>
-      </div>
-      <div>
-        <%= f.number_field :milis, class: input_classes, required: true, placeholder: "ms" %>
+        <%= f.number_field :time, step: :any, class: input_classes, required: true, placeholder: "_.__s" %>
       </div>
     </div>
 
