--- a/app/views/chugs/_podium_list.html.erb
+++ b/app/views/chugs/_podium_list.html.erb
@@ -4,7 +4,7 @@
       <% if index == 0 %>
         <li class="flex items-center justify-center">
           <div class="relative py-4 w-80 h-72">
-            <img class="w-28 h-28 absolute z-10 ml-28" src="/img/medal_gold.png" alt="Gold medal">
+            <%= image_tag 'medal_gold.png', class: "w-28 h-28 absolute z-10 ml-28" %>
             <%= link_to chug.user, class: "self-center" do %>
               <% gravatar_for chug.user, class: "absolute z-20 gravatar gold-gravatar rounded-full" %>
             <% end %>
@@ -13,7 +13,7 @@
               <br> <i class="text-sm"><%= chug.user.name %></i></p>
             </div>
       <% elsif index == 1 %>
-            <img class="w-28 h-28 absolute z-10 mt-12" src="/img/medal_silver.png" alt="Gold medal">
+            <%= image_tag 'medal_silver.png', class: "w-28 h-28 absolute z-10 mt-12" %>
             <%= link_to chug.user, class: "self-center" do %>
               <% gravatar_for chug.user, class: "absolute z-20 gravatar silver-gravatar rounded-full" %>
             <% end %>
@@ -22,7 +22,7 @@
                 <br> <i class="text-sm"><%= chug.user.name %></i></p>
             </div>
       <% elsif index == 2 %>
-            <img class="w-28 h-28 absolute z-10 ml-56 mt-24" src="/img/medal_bronze.png" alt="Gold medal">
+            <%= image_tag 'medal_bronze.png', class: "w-28 h-28 absolute z-10 ml-56 mt-24" %>
             <%= link_to chug.user, class: "self-center" do %>
               <% gravatar_for chug.user, class: "absolute z-20 gravatar bronze-gravatar rounded-full" %>
             <% end %>
