--- a/app/views/chugtypes/_form.html.erb
+++ b/app/views/chugtypes/_form.html.erb
@@ -8,7 +8,7 @@
       <div class="mt-4 mb-2">
         Hoeveelheid (in ml)
       </div>
-      <%= f.text_field :amount, class: input_classes, required: true, placeholder: "330" %>
+      <%= f.number_field :amount, class: input_classes, required: true, placeholder: "330" %>
     </div>
 
     <div class="flex justify-center mt-5">
