--- a/app/views/chugs/_podium_list.html.erb
+++ b/app/views/chugs/_podium_list.html.erb
@@ -3,14 +3,14 @@
     <% chugs.each_with_index do |chug, index|  %>
       <% if index == 0 %>
         <li class="flex items-center justify-center">
-          <div class="relative py-4 w-80 h-72">
+          <div class="relative py-4 w-80 h-80">
             <%= image_tag 'medal_gold.png', class: "w-28 h-28 absolute z-10 ml-28" %>
             <%= link_to chug.user, class: "self-center" do %>
               <% gravatar_for chug.user, class: "absolute z-20 gravatar gold-gravatar rounded-full" %>
             <% end %>
             <div class="flex items-center justify-center">
-              <p class="text-center absolute gold-text w-24 text-sm"><strong><%= chug.time.round(2) %></strong>s
-              <br> <i class="text-sm"><%= chug.user.name %></i></p>
+              <p class="text-center absolute gold-text w-24 text-sm"><strong style="font-size: large"><%= chug.time.round(2) %></strong>s
+              <br><i class="text-sm"><%= chug.user.name %></i></p>
             </div>
       <% elsif index == 1 %>
             <%= image_tag 'medal_silver.png', class: "w-28 h-28 absolute z-10 mt-12" %>
@@ -18,8 +18,8 @@
               <% gravatar_for chug.user, class: "absolute z-20 gravatar silver-gravatar rounded-full" %>
             <% end %>
             <div class="flex items-center justify-center">
-              <p class="text-center absolute silver-text w-24 text-sm"><strong><%= chug.time.round(2) %></strong>s
-                <br> <i class="text-sm"><%= chug.user.name %></i></p>
+              <p class="text-center absolute silver-text w-24 text-sm"><strong style="font-size: large"><%= chug.time.round(2) %></strong>s
+                <br><i class="text-sm"><%= chug.user.name %></i></p>
             </div>
       <% elsif index == 2 %>
             <%= image_tag 'medal_bronze.png', class: "w-28 h-28 absolute z-10 ml-56 mt-24" %>
@@ -27,8 +27,8 @@
               <% gravatar_for chug.user, class: "absolute z-20 gravatar bronze-gravatar rounded-full" %>
             <% end %>
             <div class="flex items-center justify-center">
-              <p class="text-center absolute bronze-text w-24 text-sm"><strong><%= chug.time.round(2) %></strong>s
-                <br> <i class="text-sm"><%= chug.user.name %></i></p>
+              <p class="text-center absolute bronze-text w-24 text-sm"><strong style="font-size: large"><%= chug.time.round(2) %></strong>s
+                <br><i><%= chug.user.name %></i></p>
             </div>
           </div>
         </li>
@@ -46,26 +46,4 @@
   <% end %>
 </ul>
 
-<style>
-  .gravatar {
-      width: 70px;
-      height: 70px;
-  }
 
-  .gold-gravatar { margin-top: 24px; margin-left: 137px; }
-  .silver-gravatar { margin-top: 74px; margin-left: 22px; }
-  .bronze-gravatar { margin-top: 122px; margin-left: 246px; }
-
-  .gold-text {
-      margin-top: 275px;
-      margin-left: 22px;
-  }
-  .silver-text {
-      margin-top: 380px;
-      margin-left: -205px;
-  }
-  .bronze-text {
-      margin-top: 455px;
-      margin-left: 215px;
-  }
-</style>
