--- a/app/views/chugs/edit.html.erb
+++ b/app/views/chugs/edit.html.erb
@@ -1,5 +1,5 @@
 <% content_for :title do %>
-  Adt van <%= @chugtype.name %> aanpassen
+  Ad van <%= @chugtype.name %> aanpassen
 <% end %>
 
 <div class="divide-y divide-gray-200 -my-6 md:grid md:grid-cols-12 md:divide-y-0 md:divide-x">
