--- a/app/views/chugs/new.html.erb
+++ b/app/views/chugs/new.html.erb
@@ -1,5 +1,5 @@
 <% content_for :title do %>
-  Nieuwe Adt van <%= @chugtype.name %>
+  Nieuwe ad van <%= @chugtype.name %>
 <% end %>
 
 <div class="divide-y divide-gray-200 -my-6 md:grid md:grid-cols-12 md:divide-y-0 md:divide-x">
