--- a/app/views/chugtypes/show.html.erb
+++ b/app/views/chugtypes/show.html.erb
@@ -28,7 +28,7 @@
     Ben jij de volgende die een <%= @chugtype.name.downcase %> van <%= @chugtype.amount %> ml in één keer leeg gaat
     trekken?
     <div class="flex justify-center mt-5 -ml-8">
-      <%= button_to "Adt!", new_chug_path(@chugtype), method: :get, class: submit_classes %>
+      <%= button_to "Ad!", new_chug_path(@chugtype), method: :get, class: submit_classes %>
     </div>
     <% if @chugtype.description %>
       <p>
@@ -71,7 +71,7 @@
     <% else %>
       <div class="md:pl-6 py-6">
         <p>
-          Wat een geluk, jij bent de eerste die een <%= @chugtype.name.downcase %> mag gaan adten!
+          Wat een geluk, jij bent de eerste die een <%= @chugtype.name.downcase %> mag gaan atten!
         </p>
       </div>
     <% end %>
