--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -59,7 +59,7 @@
           "Aantal vergaderingen voorgezeten": @user.meetings_chaired.count,
           "Aantal vergaderingen genotuleerd": @user.meetings_minuted.count,
           "Aantal bakken gevouwen": @user.chugs.count,
-          "Snelste adt getrokken": @user.fastest_chug
+          "Snelste ad getrokken": @user.fastest_chug
         } %>
         <% specs.each do |name, value| %>
           <div class="py-2 sm:py-4 sm:grid sm:grid-cols-3 sm:gap-4">
