--- a/app/views/chugs/_podium_list.html.erb
+++ b/app/views/chugs/_podium_list.html.erb
@@ -40,7 +40,7 @@
     <%= render chugs %>
     <div class="py-4 pb-4">
       <i>
-        Er moeten minimaal 3 keer geadt zijn om het scorebord te kunnen zien.
+        Er moeten minimaal drie adjes zijn om het scorebord te zien.
       </i>
     </div>
   <% end %>
