Bit of template editing so everything is neat

--- a/app/views/user_mailer/mail_new_event.html.erb
+++ b/app/views/user_mailer/mail_new_event.html.erb
@@ -13,11 +13,11 @@
     <p>Schrijf je zo snel mogelijk in dan wel uit op https://www.zondersikkel.nl/events/<%= @event.id %></p>
     <p>We hopen je daar te zien!</p>
     <p>Details van de activiteit:</p>
-    <p><%= @event.date %></p>
-    <p><%= @event.title %></p>
-    <p><%= @event.date.strftime("%d-%m-%Y") %> om <%= @event.date.strftime("%H:%M") %><% unless @event.end_time.nil? %> en eindigt op <%= @event.end_time.strftime("%d-%m-%Y") %> om <%= @event.end_time.strftime("%H:%M") %><% end %></p>
+    <p>Titel: <%= @event.title %></p>
+    <p>Datum en tijd: begint op <%= @event.date.strftime("%d-%m-%Y") %> om <%= @event.date.strftime("%H:%M") %><% unless @event.end_time.nil? %> en eindigt op <%= @event.end_time.strftime("%d-%m-%Y") %> om <%= @event.end_time.strftime("%H:%M") %><% end %></p>
     <p><% unless @event.location.nil? %>Locatie: <%= @event.location %><% end %></p>
     <p><% unless @event.description.nil? %>Beschrijving:
-        <%= @event.description %><% end %></p>
+<%= @event.description.to_plain_text %>
+       <% end %></p>
   </body>
 </html>
