--- a/app/views/user_mailer/mail_new_event.text.erb
+++ b/app/views/user_mailer/mail_new_event.text.erb
@@ -7,9 +7,9 @@ We hopen je daar te zien!
 
 
 Details van de activiteit:
-<%= @event.title %>
-<%= @event.date.strftime("%d-%m-%Y") %> om <%= @event.date.strftime("%H:%M") %><% unless @event.end_time.nil? %> en eindigt op <%= @event.end_time.strftime("%d-%m-%Y") %> om <%= @event.end_time.strftime("%H:%M") %><% end %>
+Titel: <%= @event.title %>
+Datum en tijd: begint op <%= @event.date.strftime("%d-%m-%Y") %> om <%= @event.date.strftime("%H:%M") %><% unless @event.end_time.nil? %> en eindigt op <%= @event.end_time.strftime("%d-%m-%Y") %> om <%= @event.end_time.strftime("%H:%M") %><% end %>
 <% unless @event.location.nil? %>Locatie: <%= @event.location %><% end %>
 <% unless @event.description.nil? %>Beschrijving:
-  <%= @event.description %>
+<%= @event.description.to_plain_text %>
 <% end %>
