--- a/app/views/chugtypes/index.html.erb
+++ b/app/views/chugtypes/index.html.erb
@@ -1,5 +1,5 @@
 <% content_for :title do %>
-  Adt Categorieën
+  Ad-categorieën
 <% end %>
 
 <% content_for :options do %>
@@ -8,35 +8,25 @@
   </div>
 <% end %>
 
-<div class="flex flex-col mt-6">
+<div class="flex flex-col -m-6">
   <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
     <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
       <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
         <table class="min-w-full divide-y divide-gray-200">
           <thead class="bg-gray-100">
-            <tr>
+          <tr>
+            <% ["Categorie", "Hoeveelheid", "Snelste tijd", "Aantal x gevouwen", "Aangemaakt op"].each do |x| %>
               <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                Categorie
+                <%= x %>
               </th>
-              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                Hoeveelheid
-              </th>
-              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                Snelste tijd
-              </th>
-              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                Aantal x gevouwen
-              </th>
-              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                Aangemaakt op
-              </th>
-              <th scope="col" class="relative px-6 py-3">
-                <span class="sr-only">Link</span>
-              </th>
-            </tr>
+            <% end %>
+            <th scope="col" class="relative px-6 py-3">
+              <span class="sr-only">Link</span>
+            </th>
+          </tr>
           </thead>
           <tbody class="bg-white divide-y divide-gray-200">
-            <%= render @chugtypes %>
+          <%= render @chugtypes %>
           </tbody>
         </table>
       </div>
