Using event_url, blank? and <p> tags within conditional statements

--- a/app/views/user_mailer/mail_new_event.html.erb
+++ b/app/views/user_mailer/mail_new_event.html.erb
@@ -10,14 +10,14 @@
   <body>
     <p>Hallo <%= @user.name %>,</p>
     <p>Er is een nieuwe activiteit genaamd '<%= @event.title %>' aangemaakt.</p>
-    <p>Schrijf je zo snel mogelijk in dan wel uit op https://www.zondersikkel.nl/events/<%= @event.id %></p>
+    <p>Schrijf je zo snel mogelijk in dan wel uit op <%= event_url(event, host:"https://zondersikkel.nl") %></p>
     <p>We hopen je daar te zien!</p>
     <p>Details van de activiteit:</p>
     <p>Titel: <%= @event.title %></p>
     <p>Datum en tijd: begint op <%= @event.date.strftime("%d-%m-%Y") %> om <%= @event.date.strftime("%H:%M") %><% unless @event.end_time.nil? %> en eindigt op <%= @event.end_time.strftime("%d-%m-%Y") %> om <%= @event.end_time.strftime("%H:%M") %><% end %></p>
-    <p><% unless @event.location.nil? %>Locatie: <%= @event.location %><% end %></p>
-    <p><% unless @event.description.nil? %>Beschrijving:
+    <% unless @event.location.blank? %><p>Locatie: <%= @event.location %></p><% end %>
+    <% unless @event.description.blank? %><p>Beschrijving:
 <%= @event.description.to_plain_text %>
-       <% end %></p>
+    </p><% end %>
   </body>
 </html>
