New event email fixes (#467)
* Using event_url, blank? and <p> tags within conditional statements

* Forgot one event_url

* users -> User.intern & private within event object instead of controller

* Improve inconsistency

* Should not be private and added the new method call

--- a/app/views/user_mailer/mail_new_event.text.erb
+++ b/app/views/user_mailer/mail_new_event.text.erb
@@ -1,7 +1,7 @@
 Hallo <%= @user.name %>,
 
 Er is een nieuwe activiteit genaamd '<%= @event.title %>' aangemaakt.
-Schrijf je zo snel mogelijk in dan wel uit op https://www.zondersikkel.nl/events/<%= @event.id %>
+Schrijf je zo snel mogelijk in dan wel uit op <%= event_url(event, host:"https://zondersikkel.nl") %>
 
 We hopen je daar te zien!
 
@@ -9,7 +9,7 @@ We hopen je daar te zien!
 Details van de activiteit:
 Titel: <%= @event.title %>
 Datum en tijd: begint op <%= @event.date.strftime("%d-%m-%Y") %> om <%= @event.date.strftime("%H:%M") %><% unless @event.end_time.nil? %> en eindigt op <%= @event.end_time.strftime("%d-%m-%Y") %> om <%= @event.end_time.strftime("%H:%M") %><% end %>
-<% unless @event.location.nil? %>Locatie: <%= @event.location %><% end %>
-<% unless @event.description.nil? %>Beschrijving:
+<% unless @event.location.blank? %>Locatie: <%= @event.location %><% end %>
+<% unless @event.description.blank? %>Beschrijving:
 <%= @event.description.to_plain_text %>
 <% end %>
