--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -12,13 +12,18 @@
   Adjes: { description: "Wie is de snelste?", path: chugtypes_path, icon: 'trending-up' },
 } %>
 
-<% user_items = {
-  Profiel: { description: "Mijn account", path: current_user, icon: 'user-circle' },
-  Instellingen: { description: "Mijn account aanpassen", path: edit_user_path(current_user), icon: 'pencil' },
-  # Disable for now
-  # Autorisaties: { description: "Mijn OAuth autorisaties", path: oauth_authorized_applications_path, icon: 'lock-closed' },
-  Uitloggen: { description: "Uitloggen van de website", path: destroy_user_session_path, icon: 'logout', method: :delete },
-} %>
+<%
+  user_items =
+    if current_user.nil?
+      {}
+    else
+      { Profiel: { description: "Mijn account", path: current_user, icon: 'user-circle' },
+        Instellingen: { description: "Mijn account aanpassen", path: edit_user_path(current_user), icon: 'pencil' },
+        # Disable for now
+        # Autorisaties: { description: "Mijn OAuth autorisaties", path: oauth_authorized_applications_path, icon: 'lock-closed' },
+        Uitloggen: { description: "Uitloggen van de website", path: destroy_user_session_path, icon: 'logout', method: :delete }, }
+    end
+%>
 
 <% external_links = {
   Discord: { url: 'https://discord.gg/7tH7dWbQkH', icon: 'fab fa-discord' },
@@ -87,6 +92,7 @@
           </div>
         </div>
 
+        <% unless current_user.nil? %>
         <div class="hidden md:block">
           <div class="ml-4 flex items-center md:ml-6">
             <div class="ml-3 relative" data-controller="dropdown"
@@ -124,6 +130,7 @@
             </div>
           </div>
         </div>
+        <% end %>
 
         <div class="-mr-2 flex md:hidden">
           <!-- Mobile menu button -->
@@ -159,6 +166,7 @@
           </div>
         </div>
 
+        <% unless current_user.nil? %>
         <div class="-mr-2 flex md:hidden">
           <!-- Mobile menu button -->
           <div data-controller="dropdown"
@@ -192,6 +200,7 @@
             </div>
           </div>
         </div>
+        <% end %>
       </div>
     </div>
   </div>
