Change , to dot in chug input

--- a/app/views/chugs/_form.html.erb
+++ b/app/views/chugs/_form.html.erb
@@ -10,7 +10,9 @@
       Tijd (in seconden)
     </div>
     <div class="w-full">
-      <%= f.text_field :time, step: :any, inputmode: 'decimal' ,class: input_classes, required: true, placeholder: "_.__", value: '' %>
+      <%= f.text_field :time, step: :any, inputmode: 'decimal' ,class: input_classes, required: true, placeholder: "_.__", value: '',
+                       oninput: "this.value = this.value.replace(',','.')"
+      %>
     </div>
 
     <div class="mt-4 mb-2">
